edit sidebar and fix za link

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>Volunteer Teacher with <a href="www.http://zaraaina.org/" target="_blank">Zara Aina</a></p>
+  <p>Volunteer Teacher for <a href="http://www.zaraaina.org/" target="_blank">Zara Aina</a></p>
 </section>
